Navbar spacing fixed

--- a/src/input.css
+++ b/src/input.css
@@ -27,7 +27,7 @@
         @apply text-base font-light text-dark-gray
     }
     .stat-space {
-        @apply flex items-center justify-center gap-1;
+        @apply flex items-center justify-center;
     }
     .stat{
         @apply text-dark-gray font-medium;
