--- a/src/output.css
+++ b/src/output.css
@@ -2560,25 +2560,12 @@ details.collapse summary::-webkit-details-marker {
   margin-right: auto;
 }
 
-.\!my-20 {
-  margin-top: 5rem !important;
-  margin-bottom: 5rem !important;
-}
-
-.\!mt-20 {
-  margin-top: 5rem !important;
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .flex {
@@ -2601,10 +2588,6 @@ details.collapse summary::-webkit-details-marker {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .min-h-\[calc\(100vh_-_21\.8rem\)\] {
   min-height: calc(100vh - 21.8rem);
 }
@@ -2616,30 +2599,6 @@ details.collapse summary::-webkit-details-marker {
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
-.w-9\/12 {
-  width: 75%;
-}
-
-.w-7\/12 {
-  width: 58.333333%;
 }
 
 .w-min {
@@ -2673,10 +2632,6 @@ details.collapse summary::-webkit-details-marker {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .\!gap-4 {
@@ -2735,10 +2690,6 @@ details.collapse summary::-webkit-details-marker {
   border-width: 1px;
 }
 
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -2746,11 +2697,6 @@ details.collapse summary::-webkit-details-marker {
 .border-dim-gray {
   --tw-border-opacity: 1;
   border-color: rgb(231 231 231 / var(--tw-border-opacity));
-}
-
-.bg-\[red\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-backgrond {
@@ -2763,21 +2709,17 @@ details.collapse summary::-webkit-details-marker {
   background-color: rgb(243 243 243 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.bg-red-500\/30 {
-  background-color: rgb(239 68 68 / 0.3);
-}
-
 .p-6 {
   padding: 1.5rem;
+}
+
+.\!py-6 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
 }
 
 .px-4 {
@@ -2795,22 +2737,8 @@ details.collapse summary::-webkit-details-marker {
   padding-bottom: 1.5rem;
 }
 
-.\!py-20 {
-  padding-top: 5rem !important;
-  padding-bottom: 5rem !important;
-}
-
-.\!py-12 {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
-}
-
 .pb-8 {
   padding-bottom: 2rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -2835,9 +2763,9 @@ details.collapse summary::-webkit-details-marker {
   line-height: 1 !important;
 }
 
-.\!text-7xl {
-  font-size: 4.5rem !important;
-  line-height: 1 !important;
+.\!text-base {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
 }
 
 .\!text-lg {
@@ -2860,21 +2788,6 @@ details.collapse summary::-webkit-details-marker {
   line-height: 1.75rem;
 }
 
-.\!text-6xl {
-  font-size: 3.75rem !important;
-  line-height: 1 !important;
-}
-
-.\!text-sm {
-  font-size: 0.875rem !important;
-  line-height: 1.25rem !important;
-}
-
-.\!text-base {
-  font-size: 1rem !important;
-  line-height: 1.5rem !important;
-}
-
 .\!font-semibold {
   font-weight: 600 !important;
 }
@@ -2886,12 +2799,6 @@ details.collapse summary::-webkit-details-marker {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.backdrop-blur-3xl {
-  --tw-backdrop-blur: blur(64px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .backdrop-blur-xl {
@@ -2920,7 +2827,6 @@ details.collapse summary::-webkit-details-marker {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.25rem;
 }
 
 .stat {
@@ -2948,25 +2854,6 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:flex-row {
     flex-direction: row;
-  }
-
-  .lg\:justify-between {
-    justify-content: space-between;
-  }
-
-  .lg\:\!text-5xl {
-    font-size: 3rem !important;
-    line-height: 1 !important;
-  }
-
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .lg\:\!text-xl {
